# AllDeskProject

./: .gitignore  LICENSE  README.md
ToonForge/: .gitignore  README.md  start_backend.sh  start_frontend.sh
VoiceForge/: README.md  pyproject.toml  requirements.txt
VoiceForge/assets/styles/: main.qss
VoiceForge/docs/: architecture.md  logging_system.md  roadmap.md  setup.md
VoiceForge/docs/reports/: v1_report.md
VoiceForge/src/: __init__.py  main.py
VoiceForge/src/app/: main.py
VoiceForge/src/core/: __init__.py  audio_processor.py  chunk_processor.py  exporter.py  text_analyzer.py  tts_engine.py  voice_planner.py
VoiceForge/src/log_system/: __init__.py  logger.py  rotation.py  sanitizer.py
VoiceForge/src/models/: __init__.py  audio.py  voice.py
VoiceForge/src/services/: __init__.py  ai_debug.py  config_manager.py  dependency_setup.py  gpu_detector.py
VoiceForge/src/ui/: main_window.py  styles.py
VoiceForge/src/ui/widgets/: __init__.py  audio_controls.py  log_center.py  output_settings.py  progress_section.py  text_editor.py  voice_selector.py
VoiceForge/tests/: test_core.py  test_services.py
WifiTester/: .gitignore  README.md  launch.py  pyproject.toml  requirements.txt
WifiTester/src/: main.py
WifiTester/src/app/: app.py  main_window.py
WifiTester/src/core/: auth.py  blocker.py  scanner.py  scheduler.py
WifiTester/src/models/: __init__.py  device.py  rule.py
WifiTester/src/ui/: dashboard.py  device_detail.py  device_list.py  login.py  scheduler_ui.py  settings.py
WifiTester/src/utils/: network.py  storage.py  vendor.py
(+31 files in other folders)
