[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voiceforge"
version = "1.0.0"
description = "AI-powered cross-platform desktop TTS application"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "AllDeskProject"},
]

dependencies = [
    "PySide6>=6.6.0",
    "loguru>=0.7.2",
    # "TTS>=0.22.0",  # optional (requires Python <3.13)
    "edge-tts>=7.0.0",
    "gtts>=2.5.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
]

[project.scripts]
voiceforge = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*", "core*", "ui*", "services*", "models*", "log_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
